[pom] Oops, not that easy, use the snapshot of lombok for jdk 21